# system-design

./: .gitignore  .pre-commit-config.yaml  README.md  hw_1.md  hw_2.md  pyproject.toml
.github/workflows/: pre-commit.yml
EDA/: EDA.ipynb
docs/: ml_system_design_doc.md
