[tool.poetry]
name = "system-design"
version = "0.1.0"
description = ""
authors = ["Konstantin Baltsat <baltsat****@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.1"
pre-commit = "^4.0.1"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
